# prescribeme

./: .gitignore  BUSINESS_INFO.md  ENV_VARIABLES.md  FLIGHT_BOOKING_REQUEST_TRACE.md  GITIGNORE_GUIDE.md  ZUSTAND_STORAGE_ANALYSIS.md
backend/: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  IMPLEMENTATION_SUMMARY.txt  INDEX.md  MONGODB_GUIDE.md  MONGODB_MIGRATION_SUMMARY.md  Makefile  NEXT_STEPS.md  QUICK_START.md  README.md  SETUP.md  alembic.ini  dev.sh  docker-compose.yml  main.py  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: dependencies.py
backend/app/config/: settings.py
backend/app/core/: config.py  security.py
backend/app/database/: __init__.py  care_sync.py  connection.py  seeder.py
backend/app/db/: mongo.py
backend/app/dependencies/: __init__.py  auth.py
backend/app/models/: __init__.py  allergy.py  appointment.py  care_relationship.py  condition.py  doctor.py  immunization.py  lab_result.py  notification.py  password_reset_token.py  patient.py  pharmacy.py  prescription.py  refresh_token.py  surgery.py  user.py
backend/app/modules/auth/: router.py  service.py
backend/app/modules/users/: router.py  service.py
backend/app/routes/: auth.py  doctors.py  home.py  patients.py  shared.py
backend/app/schemas/: __init__.py  appointment.py  auth.py  dashboard.py  doctor.py  home.py  medical_history.py  notification.py  patient.py  prescription.py  prescription_requests.py  settings.py  user.py
backend/app/utils/: auth.py
backend/tests/: conftest.py
docs/: E2E_EXISTING_FEATURES_IMPLEMENTATION.md
(+71 files in other folders)
