[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prescribeme-api"
version = "0.1.0"
description = "PrescribeMe Backend API"
requires-python = ">=3.11"
authors = [
    {name = "PrescribeMe Team"},
]
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.0",
    "beanie==1.26.0",
    "motor==3.3.2",
    "pymongo==4.6.1",
    "pydantic==2.10.3",
    "pydantic-settings==2.3.0",
    "email-validator>=2.0.0",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "httpx==0.27.0",
    "black==24.10.0",
    "ruff==0.8.2",
    "mypy==1.13.0",
    "mongomock-motor==0.0.11",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "W"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
